fix overflow in the initial code

--- a/wiki/encyclopedia/static/encyclopedia/styles.css
+++ b/wiki/encyclopedia/static/encyclopedia/styles.css
@@ -1,38 +1,89 @@
+/* CSS variables */
+
+:root {
+  --white: #ffffff;
+  --gray-200: #f0f0f0;
+}
+
+/* CSS reset  */
+/* based on modern CSS reset by Josh Comeau */
+/* https://www.joshwcomeau.com/css/custom-css-reset/ */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+* {
+  margin: 0;
+}
 body {
-    margin: 0;
-    background-color: white;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+/* Styles  */
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  background-color: var(--white);
 }
 
 code {
-    white-space: pre;
+  white-space: pre;
 }
 
-h1 {
-    margin-top: 0px;
-    padding-top: 20px;
+.row {
+  @media (min-width: 768px) {
+    height: 100%;
+  }
 }
 
-textarea {
-    height: 90vh;
-    width: 80%;
-}
+/* h1 {
+  margin-top: 0px;
+  padding-top: 20px;
+} */
+
+/* textarea {
+  height: 90vh;
+  width: 80%;
+} */
 
 .main {
-    padding: 10px;
+  padding: 10px;
 }
 
 .search {
-    width: 100%;
-    font-size: 15px;
-    line-height: 15px;
+  width: 100%;
+  font-size: 15px;
+  line-height: 15px;
 }
 
 .sidebar {
-    background-color: #f0f0f0;
-    height: 100vh;
-    padding: 20px;
+  background-color: var(--gray-200);
+  height: 100%;
+  padding: 20px;
 }
 
 .sidebar h2 {
-    margin-top: 5px;
+  margin-top: 5px;
 }
